[social] fix test